Add comment to clarify vertical-align warning

--- a/src/plugins/css/preflight.css
+++ b/src/plugins/css/preflight.css
@@ -212,6 +212,12 @@ samp {
  * CSS Remedy, with `svg` added as well.
  *
  * https://github.com/mozdevs/cssremedy/issues/14
+ * 
+ * vertical-align: middle, is a fallback for when display is
+ * changed to inline block, this will show a warning of propety
+ * being ignored.
+ * 
+ * https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210
  */
 
 img,
