Add selection variant
Co-Authored-By: Eric Rodrigues Pires <eric@eric.dev.br>

--- a/tests/jit/variants.test.css
+++ b/tests/jit/variants.test.css
@@ -41,6 +41,14 @@
   --tw-text-opacity: 1;
   color: rgba(239, 68, 68, var(--tw-text-opacity));
 }
+.selection\:bg-blue-500::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+}
+.selection\:text-white::selection {
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
 .before\:block::before {
   content: '';
   display: block;
