--- a/tests/jit/arbitrary-values.test.css
+++ b/tests/jit/arbitrary-values.test.css
@@ -1,6 +1,9 @@
-*,
-::before,
-::after {
+.rotate-\[23deg\],
+.rotate-\[2\.3rad\],
+.rotate-\[401grad\],
+.rotate-\[1\.5turn\],
+.skew-x-\[3px\],
+.skew-y-\[3px\] {
   --tw-translate-x: 0;
   --tw-translate-y: 0;
   --tw-rotate: 0;
@@ -11,15 +14,21 @@
   --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y))
     rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
     scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+*,
+::before,
+::after {
   --tw-border-opacity: 1;
   border-color: rgba(229, 231, 235, var(--tw-border-opacity));
-  --tw-shadow: 0 0 #0000;
+}
+.ring-\[10px\] {
   --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/);
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
   --tw-ring-color: rgba(59, 130, 246, 0.5);
   --tw-ring-offset-shadow: 0 0 #0000;
   --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
 }
 .blur-\[15px\],
 .brightness-\[300\%\],
@@ -40,11 +49,16 @@
   --tw-drop-shadow: var(--tw-empty, /*!*/ /*!*/);
   --tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale)
     var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-  filter: var(--tw-filter);
 }
-*,
-::before,
-::after {
+.backdrop-blur-\[11px\],
+.backdrop-brightness-\[1\.23\],
+.backdrop-contrast-\[0\.87\],
+.backdrop-grayscale-\[0\.42\],
+.backdrop-hue-rotate-\[1\.57rad\],
+.backdrop-invert-\[0\.66\],
+.backdrop-opacity-\[22\%\],
+.backdrop-saturate-\[144\%\],
+.backdrop-sepia-\[0\.38\] {
   --tw-backdrop-blur: var(--tw-empty, /*!*/ /*!*/);
   --tw-backdrop-brightness: var(--tw-empty, /*!*/ /*!*/);
   --tw-backdrop-contrast: var(--tw-empty, /*!*/ /*!*/);
@@ -380,27 +394,35 @@
 }
 .blur-\[15px\] {
   --tw-blur: blur(15px);
+  filter: var(--tw-filter);
 }
 .brightness-\[300\%\] {
   --tw-brightness: brightness(300%);
+  filter: var(--tw-filter);
 }
 .contrast-\[2\.4\] {
   --tw-contrast: contrast(2.4);
+  filter: var(--tw-filter);
 }
 .grayscale-\[0\.55\] {
   --tw-grayscale: grayscale(0.55);
+  filter: var(--tw-filter);
 }
 .hue-rotate-\[0\.8turn\] {
   --tw-hue-rotate: hue-rotate(0.8turn);
+  filter: var(--tw-filter);
 }
 .invert-\[0\.75\] {
   --tw-invert: invert(0.75);
+  filter: var(--tw-filter);
 }
 .saturate-\[180\%\] {
   --tw-saturate: saturate(180%);
+  filter: var(--tw-filter);
 }
 .sepia-\[0\.2\] {
   --tw-sepia: sepia(0.2);
+  filter: var(--tw-filter);
 }
 .backdrop-blur-\[11px\] {
   --tw-backdrop-blur: blur(11px);
