Support arbitrary values for `transitionProperty`
Transition property can be a great use case for the JIT arbitrary values blocks. As such, this commit makes that utility accept arbitrary values and apply those values to the `transition-property` property.

--- a/tests/jit/arbitrary-values.test.css
+++ b/tests/jit/arbitrary-values.test.css
@@ -144,6 +144,21 @@
   --tw-skew-y: 3px;
   transform: var(--tw-transform);
 }
+.transition-\[left\] {
+  transition-property: left;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition-\[width\2c height\] {
+  transition-property: width, height;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition-\[color\2c opacity\2c height\2c left\2c width\] {
+  transition-property: color, opacity, height, left, width;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .grid-cols-\[200px\2c repeat\(auto-fill\2c minmax\(15\%\2c 100px\)\)\2c 300px\] {
   grid-template-columns: 200px repeat(auto-fill, minmax(15%, 100px)) 300px;
 }
