--- a/tests/variants.test.css
+++ b/tests/variants.test.css
@@ -11,11 +11,11 @@
 }
 .first-letter\:text-red-500::first-letter {
   --tw-text-opacity: 1;
-  color: rgba(239, 68, 68, var(--tw-text-opacity));
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 .first-line\:bg-yellow-300::first-line {
   --tw-bg-opacity: 1;
-  background-color: rgba(253, 224, 71, var(--tw-bg-opacity));
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
 }
 .first-line\:underline::first-line {
   text-decoration: underline;
@@ -26,7 +26,7 @@
 }
 .marker\:text-red-500 *::marker {
   --tw-text-opacity: 1;
-  color: rgba(239, 68, 68, var(--tw-text-opacity));
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 .marker\:text-lg::marker {
   font-size: 1.125rem;
@@ -34,23 +34,23 @@
 }
 .marker\:text-red-500::marker {
   --tw-text-opacity: 1;
-  color: rgba(239, 68, 68, var(--tw-text-opacity));
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 .selection\:bg-blue-500 *::selection {
   --tw-bg-opacity: 1;
-  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 .selection\:text-white *::selection {
   --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .selection\:bg-blue-500::selection {
   --tw-bg-opacity: 1;
-  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 .selection\:text-white::selection {
   --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .before\:block::before {
   content: '';
@@ -59,7 +59,7 @@
 .before\:bg-red-500::before {
   content: '';
   --tw-bg-opacity: 1;
-  background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .after\:flex::after {
   content: '';
