--- a/tests/arbitrary-values.test.css
+++ b/tests/arbitrary-values.test.css
@@ -281,14 +281,14 @@
 }
 .from-\[var\(--color\)\] {
   --tw-gradient-from: var(--color);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(255, 255, 255, 0));
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(255 255 255 / 0));
 }
 .via-\[\#da5b66\] {
   --tw-gradient-stops: var(--tw-gradient-from), #da5b66, var(--tw-gradient-to, rgb(218 91 102 / 0));
 }
 .via-\[var\(--color\)\] {
   --tw-gradient-stops: var(--tw-gradient-from), var(--color),
-    var(--tw-gradient-to, rgba(255, 255, 255, 0));
+    var(--tw-gradient-to, rgb(255 255 255 / 0));
 }
 .to-\[\#da5b66\] {
   --tw-gradient-to: #da5b66;
