--- a/tests/basic-usage.test.css
+++ b/tests/basic-usage.test.css
@@ -323,7 +323,7 @@
 .break-before-page  {
   break-before: page;
 }
-.break-inside-avoid-col  {
+.break-inside-avoid-column  {
   break-inside: avoid-column;
 }
 .break-after-auto {
