Reset button's border-radius to 0 for Edge

--- a/src/css/preflight.css
+++ b/src/css/preflight.css
@@ -162,6 +162,14 @@ textarea {
 }
 
 /*
+Remove the default border radius in Edge.
+*/
+
+button {
+  border-radius: 0;
+}
+
+/*
 Remove the inheritance of text transform in Edge and Firefox.
 */
 
