Add `overscroll-inline` utilities
Signed-off-by: Peter Neupauer <peter@neupauer.sk>

--- a/tests/basic-usage.test.css
+++ b/tests/basic-usage.test.css
@@ -469,6 +469,9 @@
 .overscroll-contain {
   overscroll-behavior: contain;
 }
+.overscroll-inline-contain {
+  overscroll-behavior-inline: contain;
+}
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
