remove explicit textDecorationOpacity utility (the JIT slash syntax suffices)

--- a/tests/arbitrary-values.test.css
+++ b/tests/arbitrary-values.test.css
@@ -808,29 +808,22 @@
   --tw-text-opacity: var(--value);
 }
 .decoration-\[black\] {
-  --tw-decoration-opacity: 1;
-  text-decoration-color: rgb(0 0 0 / var(--tw-decoration-opacity));
+  text-decoration-color: black;
 }
 .decoration-\[rgb\(123\2c 123\2c 123\)\] {
-  --tw-decoration-opacity: 1;
-  text-decoration-color: rgb(123 123 123 / var(--tw-decoration-opacity));
+  text-decoration-color: rgb(123, 123, 123);
 }
 .decoration-\[rgb\(123\2c _123\2c _123\)\] {
-  --tw-decoration-opacity: 1;
-  text-decoration-color: rgb(123 123 123 / var(--tw-decoration-opacity));
+  text-decoration-color: rgb(123, 123, 123);
 }
 .decoration-\[rgb\(123_123_123\)\] {
-  --tw-decoration-opacity: 1;
-  text-decoration-color: rgb(123 123 123 / var(--tw-decoration-opacity));
+  text-decoration-color: rgb(123 123 123);
 }
 .decoration-\[color\:var\(--color\)\] {
   text-decoration-color: var(--color);
 }
-.decoration-opacity-\[0\.8\] {
-  --tw-decoration-opacity: 0.8;
-}
-.decoration-opacity-\[var\(--value\)\] {
-  --tw-decoration-opacity: var(--value);
+.decoration-\[var\(--color\)\] {
+  text-decoration-color: var(--color);
 }
 .placeholder-\[var\(--placeholder\)\]::placeholder {
   color: var(--placeholder);
