Add remaining `text-decoration` utilities

--- a/tests/basic-usage.test.css
+++ b/tests/basic-usage.test.css
@@ -637,6 +637,12 @@
 .decoration-clone {
   box-decoration-break: clone;
 }
+.box-decoration-slice {
+  box-decoration-break: slice;
+}
+.box-decoration-clone {
+  box-decoration-break: clone;
+}
 .bg-cover {
   background-size: cover;
 }
@@ -771,11 +777,26 @@
 .underline {
   text-decoration: underline;
 }
+.decoration-underline {
+  text-decoration: underline;
+}
 .decoration-red-600 {
   text-decoration-color: #dc2626;
 }
 .decoration-solid {
   text-decoration-style: solid;
+}
+.decoration {
+  text-decoration-thickness: 1px;
+}
+.decoration-2 {
+  text-decoration-thickness: 2px;
+}
+.underline-offset-2 {
+  text-underline-offset: 2px;
+}
+.underline-right {
+  text-underline-position: right;
 }
 .antialiased {
   -webkit-font-smoothing: antialiased;
