Add `list-style-image` utilities
Fix the ambiguity of the `list` utility by introducing the `string:` type for the arbitrary values.

This also introduces breaking change:

list-[var(--value)] ~> list-[string:var(--value)]

Signed-off-by: Peter Neupauer <peter@neupauer.sk>

--- a/tests/arbitrary-values.test.css
+++ b/tests/arbitrary-values.test.css
@@ -368,10 +368,13 @@
 .scroll-pt-\[var\(--scroll-padding\)\] {
   scroll-padding-top: var(--scroll-padding);
 }
+.list-\[url\(\'\/path-to-image\.png\'\)\] {
+  list-style-image: url('/path-to-image.png');
+}
 .list-\[\'\\1f44d\'\] {
   list-style-type: '\1F44D';
 }
-.list-\[var\(--value\)\] {
+.list-\[string\:var\(--value\)\] {
   list-style-type: var(--value);
 }
 .columns-\[20\] {
