Revert "Use media query strategy for dark mode"
This reverts commit beee4824e0bbbec6e2a73c318f57a15fba59c47e.

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,9 +3,7 @@
   background-size: 150rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  .beams {
-    background-image: url('../img/beams/hero-dark@90.jpg');
-    background-size: 86.125rem;
-  }
+:global(.dark) .beams {
+  background-image: url('../img/beams/hero-dark@90.jpg');
+  background-size: 86.125rem;
 }
